Fixing alignment in ProductChooser

--- a/src/components/ProductChooser/style.module.css
+++ b/src/components/ProductChooser/style.module.css
@@ -12,6 +12,11 @@
     cursor: pointer;
   }
 
+  & > div {
+    display: flex;
+    align-items: center;
+  }
+
   & img {
     height: 16px;
     margin-right: 4px;
